romm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: romm
  namespace: romm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: romm
  template:
    metadata:
      labels:
        app: romm
    spec:
      enableServiceLinks: false
      containers:
        - name: romm
          image: rommapp/romm:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: library
              mountPath: /romm/library
            - name: config
              mountPath: /romm/config/config.yml
              subPath: config.yml
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: romm-library
        - name: config
          configMap:
            name: romm-config
