romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  type: ClusterIP
  selector:
    app: romm
  ports:
    - port: 80
      targetPort: 8080
