romm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  namespace: romm
spec:
  defaultBackend:
    service:
      name: romm
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - romm
